# ai-engineering-buildcamp

./: .gitignore  README.md  pyproject.toml
01-foundation/: OpenAI_response_api.ipynb  Rag.ipynb  homework.ipynb  rag.py  streaming_structured_output.ipynb  structured_output.ipynb  structured_output_doc.ipynb
