[project]
name = "ai-engineering-buildcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.4",
    "jaxn>=0.0.4",
    "markitdown[pdf]>=0.1.4",
    "minsearch>=0.0.7",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
